--- a/src/FluentEmail.Core/FluentEmail.Core.csproj
+++ b/src/FluentEmail.Core/FluentEmail.Core.csproj
@@ -5,6 +5,8 @@
     <AssemblyTitle>Fluent Email</AssemblyTitle>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssetsDirectory>../../assets</AssetsDirectory>
+    <PackageId>jcamp.$(AssemblyName)</PackageId>
+    <Product>jcamp.$(AssemblyName)</Product>
   </PropertyGroup>
 
   <!--<Target Name="PostcompileScript" AfterTargets="Build" Condition=" '$(IsCrossTargetingBuild)' != 'true' ">
