--- a/src/Senders/FluentEmail.Graph/FluentEmail.Graph.csproj
+++ b/src/Senders/FluentEmail.Graph/FluentEmail.Graph.csproj
@@ -6,6 +6,8 @@
     <PackageTags>$(PackageTags);graph</PackageTags>
     <TargetFramework>netstandard2.0</TargetFramework>
     <NoWarn>NU5104</NoWarn>
+    <PackageId>jcamp.$(AssemblyName)</PackageId>
+    <Product>jcamp.$(AssemblyName)</Product>
   </PropertyGroup>
 
   <ItemGroup>
