--- a/src/Senders/FluentEmail.Mailgun/FluentEmail.Mailgun.csproj
+++ b/src/Senders/FluentEmail.Mailgun/FluentEmail.Mailgun.csproj
@@ -5,6 +5,8 @@
     <AssemblyTitle>Fluent Email - MailGun</AssemblyTitle>
     <PackageTags>$(PackageTags);mailgun</PackageTags>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageId>jcamp.$(AssemblyName)</PackageId>
+    <Product>jcamp.$(AssemblyName)</Product>
   </PropertyGroup>
 
   <ItemGroup>
