--- a/src/Senders/FluentEmail.Smtp/FluentEmail.Smtp.csproj
+++ b/src/Senders/FluentEmail.Smtp/FluentEmail.Smtp.csproj
@@ -6,6 +6,8 @@
     <Authors>Luke Lowrey;Ben Cull;Github Contributors</Authors>
     <PackageTags>$(PackageTags);smtp</PackageTags>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageId>jcamp.$(AssemblyName)</PackageId>
+    <Product>jcamp.$(AssemblyName)</Product>
   </PropertyGroup>
 
   <ItemGroup>
