--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
 
-    <Authors>Luke Lowrey;Ben Cull;Github Contributors</Authors>
+    <Authors>Luke Lowrey;Ben Cull;Github Contributors;John Campion</Authors>
     <PackageTags>email;smtp;fluent;fluentemail</PackageTags>
     <PackageIconUrl>https://raw.githubusercontent.com/lukencode/FluentEmail/master/assets/fluentemail_logo_64x64.png</PackageIconUrl>
     <PackageIcon>fluentemail_logo_64x64.png</PackageIcon>
@@ -11,7 +11,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>3.0.3.1</Version>
+    <Version>3.1.0</Version>
 
 
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
