--- a/src/Senders/FluentEmail.MailKit/FluentEmail.MailKit.csproj
+++ b/src/Senders/FluentEmail.MailKit/FluentEmail.MailKit.csproj
@@ -16,6 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MailKit" Version="3.5.0" />
+    <PackageReference Include="MailKit" Version="4.3.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
   </ItemGroup>
 </Project>
