--- a/src/Senders/FluentEmail.Azure.Email/FluentEmail.Azure.Email.csproj
+++ b/src/Senders/FluentEmail.Azure.Email/FluentEmail.Azure.Email.csproj
@@ -5,7 +5,8 @@
         <AssemblyTitle>Fluent Email - Azure Email</AssemblyTitle>
         <PackageTags>$(PackageTags);azureemail</PackageTags>
         <TargetFramework>net6.0</TargetFramework>
-        <Version>$(Version)-pre</Version>
+        <PackageId>jcamp.$(AssemblyName)</PackageId>
+        <Product>jcamp.$(AssemblyName)</Product>
     </PropertyGroup>
 
     <ItemGroup>
