--- a/src/Senders/FluentEmail.Azure.Email/FluentEmail.Azure.Email.csproj
+++ b/src/Senders/FluentEmail.Azure.Email/FluentEmail.Azure.Email.csproj
@@ -15,7 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Azure.Communication.Email" Version="1.0.0-beta.1" />
+      <PackageReference Include="Azure.Communication.Email" Version="1.0.1" />
     </ItemGroup>
 
 </Project>
