--- a/test/FluentEmail.Razor.Tests/FluentEmail.Razor.Tests.csproj
+++ b/test/FluentEmail.Razor.Tests/FluentEmail.Razor.Tests.csproj
@@ -27,4 +27,9 @@
     <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="NUnit3TestAdapter" Version="4.5.0" />
+    <PackageReference Update="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+  </ItemGroup>
+
 </Project>
