--- a/src/FluentEmail.Core/FluentEmail.Core.csproj
+++ b/src/FluentEmail.Core/FluentEmail.Core.csproj
@@ -7,11 +7,17 @@
     <AssetsDirectory>../../assets</AssetsDirectory>
     <PackageId>jcamp.$(AssemblyName)</PackageId>
     <Product>jcamp.$(AssemblyName)</Product>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <!--<Target Name="PostcompileScript" AfterTargets="Build" Condition=" '$(IsCrossTargetingBuild)' != 'true' ">
     <Exec Command="dotnet pack -no-build -configuration $(Configuration)" />
   </Target>-->
+
+  <ItemGroup>
+    <None Include="../../README.md" Pack="true" Visible="false" PackagePath="\"/>
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
