--- a/src/Renderers/FluentEmail.Liquid/FluentEmail.Liquid.csproj
+++ b/src/Renderers/FluentEmail.Liquid/FluentEmail.Liquid.csproj
@@ -14,9 +14,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fluid.Core" Version="2.3.1" />
+    <PackageReference Include="Fluid.Core" Version="2.5.0" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.13" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
   <ItemGroup>
