--- a/src/Senders/FluentEmail.Azure.Email/FluentEmail.Azure.Email.csproj
+++ b/src/Senders/FluentEmail.Azure.Email/FluentEmail.Azure.Email.csproj
@@ -15,6 +15,10 @@
     </ItemGroup>
 
     <ItemGroup>
+        <None Include="README.md" Pack="true" PackagePath="\"/>
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="Azure.Communication.Email" Version="1.0.1" />
     </ItemGroup>
 
