--- a/src/Senders/FluentEmail.Graph/FluentEmail.Graph.csproj
+++ b/src/Senders/FluentEmail.Graph/FluentEmail.Graph.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\"/>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\FluentEmail.Core\FluentEmail.Core.csproj" />
   </ItemGroup>
 
