--- a/src/Senders/FluentEmail.Mailtrap/FluentEmail.Mailtrap.csproj
+++ b/src/Senders/FluentEmail.Mailtrap/FluentEmail.Mailtrap.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\FluentEmail.Smtp\FluentEmail.Smtp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\"/>
+  </ItemGroup>
+
 </Project>
