--- a/src/Senders/FluentEmail.SendGrid/FluentEmail.SendGrid.csproj
+++ b/src/Senders/FluentEmail.SendGrid/FluentEmail.SendGrid.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\"/>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Sendgrid" Version="9.28.1" />
   </ItemGroup>
 
