--- a/src/Senders/FluentEmail.Smtp/FluentEmail.Smtp.csproj
+++ b/src/Senders/FluentEmail.Smtp/FluentEmail.Smtp.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\..\FluentEmail.Core\FluentEmail.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\"/>
+  </ItemGroup>
+
 </Project>
