fix: use latest UnDotNet.BootstrapEmail

--- a/src/Renderers/FluentEmail.Bootstrap/FluentEmail.Bootstrap.csproj
+++ b/src/Renderers/FluentEmail.Bootstrap/FluentEmail.Bootstrap.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="UnDotNet.BootstrapEmail" Version="1.0.0" />
+    <PackageReference Include="UnDotNet.BootstrapEmail" Version="1.*" />
     <PackageReference Include="Verify.NUnit" Version="22.5.0" />
   </ItemGroup>
 
